--- a/app/src/main/res/layout/activity_adminreservasequipo_admin.xml
+++ b/app/src/main/res/layout/activity_adminreservasequipo_admin.xml
@@ -23,11 +23,11 @@
 
             <TextView
                 android:id="@+id/tv_reservarequipos"
-                android:layout_width="wrap_content"
+                android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
                 android:gravity="center"
-                android:text="RESERVAR EQUIPOS"
+                android:text="@string/reservar_equipos"
                 android:textSize="18sp"
                 android:textStyle="bold" />
 
@@ -47,12 +47,12 @@
             <TextView
                 android:id="@+id/tv_historialreservas"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
+                android:layout_height="0dp"
                 android:layout_gravity="end"
                 android:layout_marginTop="50dp"
                 android:layout_weight="1"
                 android:gravity="center"
-                android:text="HISTORIAL RESERVACIONES"
+                android:text="@string/tv_historialreservas"
                 android:textSize="18sp"
                 android:textStyle="bold" />
         </LinearLayout>
@@ -64,7 +64,7 @@
             android:background="@color/atarraya" />
 
         <ListView
-            android:id="@+id/ltv_equiposreservados"
+            android:id="@+id/ltv_historialequiposreservados"
             android:layout_width="match_parent"
             android:layout_height="518dp" />
 
