--- a/app/src/main/res/layout/activity_dashad_registroacademico.xml
+++ b/app/src/main/res/layout/activity_dashad_registroacademico.xml
@@ -27,6 +27,7 @@
                 <androidx.cardview.widget.CardView
                     android:foreground="?android:attr/selectableItemBackground"
                     android:clickable="true"
+                    android:focusable="true"
                     android:id="@+id/cv_adminalumnos"
                     android:layout_width="160dp"
                     android:layout_height="190dp"
@@ -49,7 +50,7 @@
                             android:gravity="center"
                             android:padding="5dp"
                             android:layout_marginTop="10dp"
-                            android:text="Administración  Alumnos"/>
+                            android:text="@string/cv_adminalumnos"/>
 
                     </LinearLayout>
                 </androidx.cardview.widget.CardView>
@@ -57,6 +58,7 @@
                     android:id="@+id/cv_admingradossecc"
                     android:foreground="?android:attr/selectableItemBackground"
                     android:clickable="true"
+                    android:focusable="true"
                     android:layout_width="160dp"
                     android:layout_height="190dp"
                     android:layout_margin="10dp">
@@ -96,6 +98,7 @@
                     android:layout_height="190dp"
                     android:layout_margin="10dp"
                     android:clickable="true"
+                    android:focusable="true"
                     android:foreground="?android:attr/selectableItemBackground"
                     android:onClick="onClick">
 
@@ -126,6 +129,7 @@
                     android:id="@+id/cv_promgrados"
                     android:foreground="?android:attr/selectableItemBackground"
                     android:clickable="true"
+                    android:focusable="true"
                     android:layout_width="160dp"
                     android:layout_height="190dp"
                     android:layout_margin="10dp">
@@ -150,7 +154,7 @@
                             android:gravity="center"
                             android:padding="5dp"
                             android:layout_marginTop="10dp"
-                            android:text="Promoción Grados"/>
+                            android:text="@string/cv_promgrados"/>
                     </LinearLayout>
                 </androidx.cardview.widget.CardView>
 
@@ -165,6 +169,7 @@
                     android:id="@+id/cv_periodosasig"
                     android:foreground="?android:attr/selectableItemBackground"
                     android:clickable="true"
+                    android:focusable="true"
                     android:layout_width="160dp"
                     android:layout_height="190dp"
                     android:layout_margin="10dp">
@@ -186,13 +191,14 @@
                             android:gravity="center"
                             android:padding="5dp"
                             android:layout_marginTop="10dp"
-                            android:text="Períodos Asignatura"/>
+                            android:text="@string/cv_periodosasig"/>
                     </LinearLayout>
                 </androidx.cardview.widget.CardView>
                 <androidx.cardview.widget.CardView
                     android:id="@+id/cv_ponderaasignatura"
                     android:foreground="?android:attr/selectableItemBackground"
                     android:clickable="true"
+                    android:focusable="true"
                     android:layout_width="160dp"
                     android:layout_height="190dp"
                     android:layout_margin="10dp">
@@ -217,7 +223,7 @@
                             android:gravity="center"
                             android:padding="5dp"
                             android:layout_marginTop="10dp"
-                            android:text="Ponderación Asignatura"/>
+                            android:text="@string/cv_ponderaasignatura"/>
                     </LinearLayout>
                 </androidx.cardview.widget.CardView>
             </LinearLayout>
