--- a/app/src/main/res/layout/activity_registrarequipo.xml
+++ b/app/src/main/res/layout/activity_registrarequipo.xml
@@ -26,12 +26,12 @@
 
                 <TextView
                     android:id="@+id/tv_registrarequipo"
-                    android:layout_width="wrap_content"
+                    android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="10dp"
                     android:layout_weight="1"
                     android:gravity="center"
-                    android:text="REGISTRAR EQUIPO"
+                    android:text="@string/cv_registrarequipo"
                     android:textSize="18sp"
                     android:textStyle="bold" />
 
@@ -39,7 +39,7 @@
 
             <View
                 android:id="@+id/divider2"
-                android:layout_width="2in"
+                android:layout_width="350dp"
                 android:layout_height="1dp"
                 android:layout_gravity="center"
                 android:background="@color/atarraya" />
@@ -54,8 +54,8 @@
                     android:id="@+id/tv_indicacionesAviso"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginLeft="10dp"
-                    android:text="Por favor completar todos los campos para realizar un nuevo registro"
+                    android:layout_marginStart="10dp"
+                    android:text="@string/indicaciones_registrarequipo"
                     android:textColor="@color/oscuro"
                     android:textSize="18sp" />
 
@@ -70,16 +70,16 @@
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="Nombre\n\del equipo:"
+                    android:text="@string/edt_nombreequipo"
                     android:textColor="@color/oscuro"
                     android:textSize="18sp" />
 
                 <EditText
                     android:id="@+id/edt_nombreequipo"
-                    android:layout_width="225dp"
+                    android:layout_width="200dp"
                     android:layout_height="wrap_content"
-                    android:layout_marginLeft="10dp"
-                    android:hint="Escriba aquí"
+                    android:layout_marginStart="10dp"
+                    android:hint="@string/escriba_aqu"
                     android:maxLength="50" />
 
             </LinearLayout>
@@ -92,7 +92,7 @@
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="Marca:"
+                    android:text="@string/edt_marcaequipo"
                     android:textColor="@color/oscuro"
                     android:textSize="18sp" />
 
@@ -100,8 +100,7 @@
                     android:id="@+id/edt_marcaequipo"
                     android:layout_width="225dp"
                     android:layout_height="wrap_content"
-                    android:layout_marginLeft="10dp"
-                    android:hint="Escriba aquí"
+                    android:hint="@string/escriba_aqu"
                     android:maxLength="50"
                     android:layout_marginStart="50dp"/>
 
@@ -115,7 +114,7 @@
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="Modelo:"
+                    android:text="@string/edt_modeloequipo"
                     android:textColor="@color/oscuro"
                     android:textSize="18sp" />
 
@@ -123,7 +122,7 @@
                     android:id="@+id/edt_modeloequipo"
                     android:layout_width="225dp"
                     android:layout_height="wrap_content"
-                    android:hint="Escriba aquí"
+                    android:hint="@string/escriba_aqu"
                     android:maxLength="35"
                     android:layout_marginStart="50dp"/>
 
@@ -137,7 +136,7 @@
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="Num Serie:"
+                    android:text="@string/edt_numserieequipo"
                     android:textColor="@color/oscuro"
                     android:textSize="18sp" />
 
@@ -146,7 +145,7 @@
                     android:layout_width="244dp"
                     android:layout_height="wrap_content"
                     android:layout_marginStart="30dp"
-                    android:hint="Escriba aquí" />
+                    android:hint="@string/escriba_aqu" />
 
             </LinearLayout>
 
@@ -157,7 +156,7 @@
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="Estado "
+                    android:text="@string/sp_estadoequipo"
                     android:textColor="@color/oscuro"
                     android:textSize="18sp" />
                <Spinner
@@ -174,20 +173,20 @@
                 android:gravity="center"
                 android:layout_marginTop="30dp">
                 <Button
-                    android:id="@+id/btn_guardaraviso"
+                    android:id="@+id/btn_guardarequipo"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="GUARDAR AVISO"
+                    android:text="@string/btn_guardarequipo"
                     android:background="@drawable/rounded_edittext_focused"
                     android:backgroundTint="@color/atarraya"
                     android:padding="5dp"
                     android:textColor="@color/blanco"/>
                 <Button
-                    android:id="@+id/btn_cancelaraviso"
+                    android:id="@+id/btn_cancelarregistro"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="CANCELAR "
-                    android:layout_marginLeft="5dp"
+                    android:text="@string/btn_cancelarregistro"
+                    android:layout_marginStart="5dp"
                     android:padding="5dp"
                     android:background="@drawable/rounded_edittext_focused"
                     android:backgroundTint="@color/pink"
