--- a/app/src/main/res/layout/activity_grados_secciones.xml
+++ b/app/src/main/res/layout/activity_grados_secciones.xml
@@ -43,6 +43,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginEnd="32dp"
+        android:onClick="launchAgregarGradoActivity"
         android:text="Agregar grado"
         app:layout_constraintEnd_toStartOf="@+id/button2"
         app:layout_constraintTop_toBottomOf="@+id/textView20" />
