--- a/app/src/main/res/layout/activity_subject.xml
+++ b/app/src/main/res/layout/activity_subject.xml
@@ -56,6 +56,7 @@
         app:layout_constraintTop_toBottomOf="@+id/textView14" />
 
     <ListView
+        android:id="@+id/lvSubjectContents"
         android:layout_width="match_parent"
         android:layout_height="609dp"
         android:layout_marginTop="4dp"
